crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__project_info__json.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
{
  "project_id": "0123456789abcdef",
  "project_name": "engramdb",
  "project_path": "/w/engramdb",
  "memory_count": 42,
  "logical_scopes": [
    "daemon",
    "retrieval"
  ],
  "created_at": "2026-01-02T03:04:05Z"
}
--- stderr ---
