crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__project_info__pretty_color.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
Project: engramdb
ID: <cyan>0123456789abcdef</cyan>
Path: /w/engramdb
Memories: 42
Scopes: daemon, retrieval
Created: 2026-01-02 03:04:05
--- stderr ---
